@@ -2,7 +2,7 @@ Source: gstreamer
 Section: libs
 Priority: optional
 Maintainer: David I. Lehn <dlehn@vt.edu>
-Build-Depends: debhelper (>= 3.0.0), libxml-dev (>= 1.8.10), zlib1g-dev (>= 1:1.1.3), libghttp-dev (>= 1.0.6), libglib1.2-dev (>= 1.2.8), libgtk1.2-dev (>= 1.2.8), libglade0-dev (>= 0.14), libglade-gnome0-dev (>= 0.14), hermes1-dev (>= 1.3.1), pkg-config (>= 0.8.0)
+Build-Depends: debhelper (>= 3.0.0), libxml2-dev (>= 2.4.12), zlib1g-dev (>= 1:1.1.3), libglib1.3-dev (>= 1.3.12), libgtk1.3-dev (>= 1.3.12), pkg-config (>= 0.8.0)
 Build-Depends-Indep: debhelper (>= 3.0.0), gtk-doc-tools (>= 0.4), jade (>= 1.2.1), transfig (>= 3.2.3.c), docbook-utils (>= 0.6.9), xsltproc (>= 1.0.6)
 Standards-Version: 3.5.6
 
@@ -37,6 +37,10 @@ Section: doc
 Recommends: libgst-dev (= ${Source-Version})
 Description: Core GStreamer documentation
  Core GStreamer documentation
+ .
+ Gstreamer Manual
+ Gstreamer Plugin Writers Guide
+ Various API docs
 
 Package: gstreamer-tools
 Architecture: any
@@ -58,22 +62,33 @@ Description: Core element and library plugins for GStreamer
  Core element and library plugins for GStreamer
  .
  Includes various basic elements:
- * file source and sink
- * tee and aggregator
- * fake source and sink for testing
- * identity
- * pipe filter
- * statistics
+  * file source and sink
+  * tee and aggregator
+  * fake source and sink for testing
+  * identity
+  * pipe filter
+  * statistics
  .
  And other important yet plugable pieces:
- * autoplugging support
- * standard scheduler
- * type detection support
- .
- Some library plugins:
- * bytestream
- * control
- * putbits
- * getbits
- .
- These plugins have no external dependencies.
+  * autoplugging support
+  * standard scheduler
+  * type detection support
+
+Package: gstreamer-lib-core
+Architecture: any
+Section: libs
+Depends: ${shlibs:Depends}
+Description: Core library plugins for GStreamer
+ Core library plugins for GStreamer
+  * bytestream
+  * control
+  * putbits
+  * getbits
+
+Package: gstreamer-lib-core-dev
+Architecture: any
+Section: devel
+Depends: gstreamer-lib-core
+Description: Development files for core library plugins for GStreamer
+ Development files for core library plugins for GStreamer
+ Includes headers for library plugins from gstreamer-lib-core
